Role Resource Listing has improved

--- a/module/Zf2auth/view/zf2auth/role-resources/index.phtml
+++ b/module/Zf2auth/view/zf2auth/role-resources/index.phtml
@@ -1,19 +1,21 @@
 <?php
-$title = 'RoleResources';
+$title     = 'Role Resources Mapping';
 $this->headTitle($title);
 $url_order = 'ASC';
-if ($order_by == 'role_id') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
- elseif ($order_by == 'resource_id') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
-
+if ($order_by == 'role_id') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+} elseif ($order_by == 'resource_id') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+}
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 <p>
-    <a href="<?php echo $this->url('role_resources', array('action'=>'add'));?>">Add new role_resources</a>
+    <a href="<?php echo $this->url('role_resources', array('action' => 'add')); ?>">Add new role_resources</a>
 </p>
 
 <?php echo $this->partial('zf2auth/elements/message.phtml', array('flashMessages' => $this->flashMessages, 'error'         => $this->error)); ?>
 <?php
-$form  = $this->form;
+$form      = $this->form;
 $form->setAttribute('action', $this->url('role_resources', array('action' => 'search')));
 $form->prepare();
 
@@ -40,24 +42,25 @@ echo $this->form()->closeTag();
 
 <table class="table">
     <thead>
-    <tr>
-    <th><a href="<?php echo $this->url('role_resources', array('order_by' => 'role_id', 'order' => $url_order, 'search_by' => $search_by)); ?>">Role Id <?php if ($order_by == 'role_id'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th><a href="<?php echo $this->url('role_resources', array('order_by' => 'resource_id', 'order' => $url_order, 'search_by' => $search_by)); ?>">Resource Id <?php if ($order_by == 'resource_id'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th>Action</th>
-    </tr>
+        <tr>
+            <th><a href="<?php echo $this->url('role_resources', array('order_by'  => 'role_id', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Roles<?php if ($order_by == 'role_id'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th><a href="<?php echo $this->url('role_resources', array('order_by'  => 'resource_id', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Resources<?php if ($order_by == 'resource_id'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th>Action</th>
+        </tr>
     </thead>
     <tbody>
-<?php foreach ($paginator as $row) : ?>
-        <tr>
-        <td><?php echo $this->escapeHtml($row->role_id);?></td>
-		<td><?php echo $this->escapeHtml($row->resource_id);?></td>
-		
-    <td>
-        <a href="<?php echo $this->url('role_resources', array('action'=>'edit', 'id' => $row->id));?>" class="btn btn-primary btn-mini edit-row">Edit</a>
-            <?php
-                    $delurl = $this->url('role_resources', array (
+        <?php
+        foreach ($paginator as $row) :
+            ?>
+            <tr>
+                <td><?php echo $this->escapeHtml($row->role_name); ?></td>
+                <td><?php echo $this->escapeHtml($row->resource_name); ?></td>
+                <td>
+                    <a href="<?php echo $this->url('role_resources', array('action' => 'edit', 'id'     => $row->id)); ?>" class="btn btn-primary btn-mini edit-row">Edit</a>
+                    <?php
+                    $delurl = $this->url('role_resources', array(
                         'action' => 'delete',
                         'id'     => $row->id,
                     ));
@@ -67,19 +70,23 @@ echo $this->form()->closeTag();
                             <input type="hidden" name="id" value="<?php echo (int) $row->id; ?>" />
                         </form>
                     </div>
-                    <a onclick="if (confirm('Are you sure you want to delete <?php echo $row->id; ?>?')) {document.<?php echo "post_" . $row->id; ?>.submit();} event.returnValue = false; return false;" href="#" class="btn btn-primary btn-mini edit-row">Delete</a>
+                    <a onclick="if (confirm('Are you sure you want to delete <?php echo $row->id; ?>?')) {
+                                document.<?php echo "post_" . $row->id; ?>.submit();
+                            }
+                            event.returnValue = false;
+                            return false;" href="#" class="btn btn-primary btn-mini edit-row">Delete</a>
 
-    </td>
-    
-        </tr>
-<?php endforeach; ?>
+                </td>
+
+            </tr>
+        <?php endforeach; ?>
     </tbody>
 </table>
 
 
 <?php
-    echo $this->paginationControl(
-            $paginator, 'Sliding', 'paginator-slide', array('order_by' => $order_by, 'order' => $order, 'search_by' => $search_by, 'pageAction' => $pageAction)
-    );
-    ?>
+echo $this->paginationControl(
+        $paginator, 'Sliding', 'paginator-slide', array('order_by'   => $order_by, 'order'      => $order, 'search_by'  => $search_by, 'pageAction' => $pageAction)
+);
+?>
 
