Role based ACL is working now

--- a/module/Zf2auth/view/zf2auth/users/add.phtml
+++ b/module/Zf2auth/view/zf2auth/users/add.phtml
@@ -7,7 +7,7 @@ $this->headTitle($title);
 <?php echo $this->partial('zf2auth/elements/message.phtml', array('flashMessages' => $this->flashMessages, 'error'         => $this->error)); ?>
 <?php
 $form  = $this->form;
-$form->setAttribute('action', $this->url('users', array('action' => 'add')));
+$form->setAttribute('action', $this->url('users/add'));
 $form->prepare();
 
 echo $this->form()->openTag($form);
