--- a/module/Zf2auth/view/zf2auth/users/edit.phtml
+++ b/module/Zf2auth/view/zf2auth/users/edit.phtml
@@ -7,7 +7,7 @@ $this->headTitle($title);
 <?php echo $this->partial('zf2auth/elements/message.phtml', array('flashMessages' => $this->flashMessages, 'error'         => $this->error)); ?>
 <?php
 $form  = $this->form;
-$form->setAttribute('action', $this->url('users', array('action' => 'edit', 'id'     => $this->id,)));
+$form->setAttribute('action', $this->url('users/edit', array('id'     => $this->id,)));
 $form->prepare();
 
 echo $this->form()->openTag($form);
