--- a/module/Zf2auth/view/zf2auth/users/index.phtml
+++ b/module/Zf2auth/view/zf2auth/users/index.phtml
@@ -1,24 +1,30 @@
 <?php
-$title = 'Users';
+$title     = 'Users';
 $this->headTitle($title);
 $url_order = 'ASC';
-if ($order_by == 'username') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
- elseif ($order_by == 'email') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
- elseif ($order_by == 'password') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
- elseif ($order_by == 'email_check_code') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
- elseif ($order_by == 'is_disabled') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
- elseif ($order_by == 'created') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
- elseif ($order_by == 'modified') { $url_order = ($order == 'ASC' )? 'DESC' : 'ASC';}
-
+if ($order_by == 'username') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+} elseif ($order_by == 'email') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+} elseif ($order_by == 'password') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+} elseif ($order_by == 'email_check_code') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+} elseif ($order_by == 'is_disabled') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+} elseif ($order_by == 'created') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+} elseif ($order_by == 'modified') {
+    $url_order = ($order == 'ASC' ) ? 'DESC' : 'ASC';
+}
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 <p>
-    <a href="<?php echo $this->url('users', array('action'=>'add'));?>">Add new users</a>
+    <a href="<?php echo $this->url('users/add'); ?>">Add new users</a>
 </p>
-
 <?php echo $this->partial('zf2auth/elements/message.phtml', array('flashMessages' => $this->flashMessages, 'error'         => $this->error)); ?>
 <?php
-$form  = $this->form;
+$form      = $this->form;
 $form->setAttribute('action', $this->url('users', array('action' => 'search')));
 $form->prepare();
 
@@ -45,41 +51,40 @@ echo $this->form()->closeTag();
 
 <table class="table">
     <thead>
-    <tr>
-    <th><a href="<?php echo $this->url('users', array('order_by' => 'username', 'order' => $url_order, 'search_by' => $search_by)); ?>">Username <?php if ($order_by == 'username'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th><a href="<?php echo $this->url('users', array('order_by' => 'email', 'order' => $url_order, 'search_by' => $search_by)); ?>">Email <?php if ($order_by == 'email'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th><a href="<?php echo $this->url('users', array('order_by' => 'password', 'order' => $url_order, 'search_by' => $search_by)); ?>">Password <?php if ($order_by == 'password'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th><a href="<?php echo $this->url('users', array('order_by' => 'email_check_code', 'order' => $url_order, 'search_by' => $search_by)); ?>">Email Check Code <?php if ($order_by == 'email_check_code'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th><a href="<?php echo $this->url('users', array('order_by' => 'is_disabled', 'order' => $url_order, 'search_by' => $search_by)); ?>">Is Disabled <?php if ($order_by == 'is_disabled'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th><a href="<?php echo $this->url('users', array('order_by' => 'created', 'order' => $url_order, 'search_by' => $search_by)); ?>">Created <?php if ($order_by == 'created'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th><a href="<?php echo $this->url('users', array('order_by' => 'modified', 'order' => $url_order, 'search_by' => $search_by)); ?>">Modified <?php if ($order_by == 'modified'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
-        </th>
-<th>Action</th>
-    </tr>
+        <tr>
+            <th><a href="<?php echo $this->url('users', array('order_by'  => 'username', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Username <?php if ($order_by == 'username'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th><a href="<?php echo $this->url('users', array('order_by'  => 'email', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Email <?php if ($order_by == 'email'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th><a href="<?php echo $this->url('users', array('order_by'  => 'password', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Password <?php if ($order_by == 'password'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th><a href="<?php echo $this->url('users', array('order_by'  => 'email_check_code', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Email Check Code <?php if ($order_by == 'email_check_code'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th><a href="<?php echo $this->url('users', array('order_by'  => 'is_disabled', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Is Disabled <?php if ($order_by == 'is_disabled'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th><a href="<?php echo $this->url('users', array('order_by'  => 'created', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Created <?php if ($order_by == 'created'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th><a href="<?php echo $this->url('users', array('order_by'  => 'modified', 'order'     => $url_order, 'search_by' => $search_by)); ?>">Modified <?php if ($order_by == 'modified'): ?><i class="icon-chevron-<?php echo $url_order == 'ASC' ? 'down' : 'up' ?>"></i><?php endif; ?></a>
+            </th>
+            <th>Action</th>
+        </tr>
     </thead>
     <tbody>
-<?php foreach ($paginator as $row) : ?>
-        <tr>
-        <td><?php echo $this->escapeHtml($row->username);?></td>
-		<td><?php echo $this->escapeHtml($row->email);?></td>
-		<td><?php echo $this->escapeHtml($row->password);?></td>
-		<td><?php echo $this->escapeHtml($row->email_check_code);?></td>
-		<td><?php echo $this->escapeHtml($row->is_disabled);?></td>
-		<td><?php echo $this->escapeHtml($row->created);?></td>
-		<td><?php echo $this->escapeHtml($row->modified);?></td>
-		
-    <td>
-        <a href="<?php echo $this->url('users', array('action'=>'edit', 'id' => $row->id));?>" class="btn btn-primary btn-mini edit-row">Edit</a>
-            <?php
-                    $delurl = $this->url('users', array (
-                        'action' => 'delete',
-                        'id'     => $row->id,
+        <?php foreach ($paginator as $row) : ?>
+            <tr>
+                <td><?php echo $this->escapeHtml($row->username); ?></td>
+                <td><?php echo $this->escapeHtml($row->email); ?></td>
+                <td><?php echo $this->escapeHtml($row->password); ?></td>
+                <td><?php echo $this->escapeHtml($row->email_check_code); ?></td>
+                <td><?php echo $this->escapeHtml($row->is_disabled); ?></td>
+                <td><?php echo $this->escapeHtml($row->created); ?></td>
+                <td><?php echo $this->escapeHtml($row->modified); ?></td>
+
+                <td>
+                    <a href="<?php echo $this->url('users/edit', array('id' => $row->id)); ?>" class="btn btn-primary btn-mini edit-row">Edit</a>
+                    <?php
+                    $delurl = $this->url('users/delete', array(
+                        'id' => $row->id,
                     ));
                     ?>
                     <div style="display: none;">
@@ -87,19 +92,23 @@ echo $this->form()->closeTag();
                             <input type="hidden" name="id" value="<?php echo (int) $row->id; ?>" />
                         </form>
                     </div>
-                    <a onclick="if (confirm('Are you sure you want to delete <?php echo $row->id; ?>?')) {document.<?php echo "post_" . $row->id; ?>.submit();} event.returnValue = false; return false;" href="#" class="btn btn-primary btn-mini edit-row">Delete</a>
+                    <a onclick="if (confirm('Are you sure you want to delete <?php echo $row->id; ?>?')) {
+                                document.<?php echo "post_" . $row->id; ?>.submit();
+                            }
+                            event.returnValue = false;
+                            return false;" href="#" class="btn btn-primary btn-mini edit-row">Delete</a>
 
-    </td>
-    
-        </tr>
-<?php endforeach; ?>
+                </td>
+
+            </tr>
+        <?php endforeach; ?>
     </tbody>
 </table>
 
 
 <?php
-    echo $this->paginationControl(
-            $paginator, 'Sliding', 'paginator-slide', array('order_by' => $order_by, 'order' => $order, 'search_by' => $search_by, 'pageAction' => $pageAction)
-    );
-    ?>
+echo $this->paginationControl(
+        $paginator, 'Sliding', 'paginator-slide', array('order_by'   => $order_by, 'order'      => $order, 'search_by'  => $search_by, 'pageAction' => $pageAction)
+);
+?>
 
